@@ -28,6 +28,7 @@
 typedef struct _fam_sub fam_sub;
 
 gboolean  _fam_sub_startup (void);
+void      _fam_sub_shutdown (void);
 fam_sub*  _fam_sub_add     (const gchar* pathname,
 			    gboolean     directory,
 			    gpointer     user_data);
